Fix Footer Spacing

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -10,7 +10,6 @@
   margin: auto;
   margin-top: 80px;
   width: 80%;
-  position: relative;
 }
 
 .h-divider .shadow {
